--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>hello-world</title>
 </head>
 <body>
-    <h1>Tasin Anwar</h1>
+    <h1>Md Tasin Anwar</h1>
     <h2>Student</h2>
     <h3>Chattogram,Bangladesh</h3>
 </body>
